# ChangeLog for dev-ruby/i18n
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/i18n/ChangeLog,v 1.39 2011/09/09 06:59:24 grobian Exp $

  09 Sep 2011; Fabian Groffen <grobian@gentoo.org> i18n-0.6.0.ebuild:
  Marked ~sparc-solaris

  24 Jul 2011; Raúl Porcel <armin76@gentoo.org> i18n-0.4.2.ebuild:
  ia64/sparc stable wrt #372391

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> i18n-0.5.0-r1.ebuild:
  Marked ~ppc/~ppc64 wrt #351835

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> i18n-0.4.2.ebuild:
  ppc/ppc64 stable wrt #372391

  13 Jul 2011; Markus Meier <maekke@gentoo.org> i18n-0.4.2.ebuild:
  x86 stable, bug #372391

  07 Jul 2011; Markos Chandras <hwoarang@gentoo.org> i18n-0.4.2.ebuild:
  Stable on amd64 wrt bug #372391

*i18n-0.6.0 (17 Jun 2011)

  17 Jun 2011; Hans de Graaff <graaff@gentoo.org> +i18n-0.6.0.ebuild:
  Version bump.

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> i18n-0.5.0-r1.ebuild:
  Add ~ia64/~sparc/~x86 wrt #355697

  25 Feb 2011; Jeroen Roovers <jer@gentoo.org> i18n-0.5.0-r1.ebuild:
  Marked ~hppa (bug #355697).

*i18n-0.5.0-r1 (20 Feb 2011)

  20 Feb 2011; Hans de Graaff <graaff@gentoo.org> +i18n-0.5.0-r1.ebuild:
  Enable tests now that test_declarative is in the tree. Drop keywords due
  to new dependency, bug 355697.

  23 Jan 2011; Hans de Graaff <graaff@gentoo.org> i18n-0.4.2.ebuild:
  Remove broken blocker on test-unit:2 since this no longer appears to be a
  problem.

  22 Jan 2011; Hans de Graaff <graaff@gentoo.org> -i18n-0.3.3.ebuild,
  -i18n-0.4.1.ebuild:
  Remove old versions.

  10 Jan 2011; Hans de Graaff <graaff@gentoo.org> i18n-0.4.2.ebuild:
  Keyword ~x86-macos.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org> i18n-0.4.1.ebuild,
  i18n-0.4.2.ebuild:
  Move forward ppc and ppc64 keywords that got missed on a version bump.

*i18n-0.4.2 (24 Dec 2010)

  24 Dec 2010; Hans de Graaff <graaff@gentoo.org> +i18n-0.4.2.ebuild: