@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX i18n-0.3.7-gentoo.patch 1070 RMD160 a6d82af6f993bf40bf629b7916aaf7c46a17a19b SHA1 174b6e37e04cfaead97c5ed2f6e8ca0910f499cb SHA256 61702838ddc01f99c58624953a2fa173ea3c511d83cb851d5373faa09ee183d2
 DIST i18n-git-0.1.3.tgz 11670 RMD160 8182335e29cf27d41d11cfc1ea867a2b0e2d68e1 SHA1 8a1604bb37125fd3e410b174958c9702548f0ed6 SHA256 e6615696e2d3a1650233a8c786e65e9ce8ca1e687aadcc6bcf8995948178e03e
@@ -12,13 +12,14 @@ EBUILD i18n-0.3.7.ebuild 1957 RMD160 69edc22ac025afb2d1c4d4dc93166cf1379f5205 SH
 EBUILD i18n-0.4.2.ebuild 2063 RMD160 5b3ca788c5742ba34e751018bba29b6384d79f04 SHA1 02ed5ec6705bf786ea2bb827d4af6ff6a6b698c5 SHA256 7ad12e63a75511e023b33a6417c9513ec502c44006670529f215c6e0b9f5c583
 EBUILD i18n-0.5.0-r1.ebuild 2130 RMD160 d857e976b2ba925d6cb9958bd94a6597f5e53274 SHA1 7f7cb18a014af4b3c5523a3badb66d4f6f283248 SHA256 511acf8f7e21326cf0899061ddd1b17174e636d3d1b24a5405cb1900462978da
 EBUILD i18n-0.5.0.ebuild 2260 RMD160 34be7f777c18b859d101464c387603c7cec58a97 SHA1 381ffffac5a0737023f75a989426824984637561 SHA256 e448b4cca133642b564fecbb31b3666b03a4c4df6a3ed82b683b8cda0be1bc0e
+EBUILD i18n-0.6.0-r1.ebuild 2433 RMD160 9b6a6ffb44b1377326bc36cdc8add57fb68eafcc SHA1 f0ea9e092cad4214ea221df4b61ba738b69f82d1 SHA256 5b3bc9c1dc322183cb66220f7a40fc5b7f470a324c4178cc5f87c8a154b126ba
 EBUILD i18n-0.6.0.ebuild 2127 RMD160 6df479ffc69cb9bf9d8f22c6b23929d6be57d4e6 SHA1 e6af7051b5fc31bafcb2085662083943658bc683 SHA256 de507fc98b0816ca48c0d7ab5a70a0a12932fb505bf2ced3c02d95412da591b0
-MISC ChangeLog 5160 RMD160 b359fc82ccc6bc19b683c99f1ef60e904683f7b3 SHA1 1aa31328141c2e74b4ff6638fc3f3310d7ed907d SHA256 4f068f87eaa19d2408776ea5049ff768b57de75bc055353f7a3251a6538eeceb
+MISC ChangeLog 5289 RMD160 e0fabe09def3737437e9fafd416404389d98f113 SHA1 5086f22b3e2c013f234e70e790bea9d195e3eb00 SHA256 adb80f50792d99dcbb2b4dc22e25ca10e7b946824db2bc00d5532aabde3db17a
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (SunOS)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk5puVYACgkQX3X2B8XHTolHMQCeMXrFi9m4ggm7zrhbsFVuyEqc
-3FIAn385EoXRhxgIBolcy2Bbt7WQ7JZo
-=mHbv
+iF4EAREIAAYFAk7byMwACgkQiIP6VqMIqNePtwD/cQ1ohL5Viidq7h9gPbnylliT
+qncbAowTz4xEUXvTqHYBAILodrn23Jl0FFKLVdWDbXwgMF16/IVdIImqZcKiRt8Z
+=2FTT
 -----END PGP SIGNATURE-----
