@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/i18n
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/i18n/ChangeLog,v 1.39 2011/09/09 06:59:24 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/i18n/ChangeLog,v 1.40 2011/12/04 19:23:50 graaff Exp $
+
+*i18n-0.6.0-r1 (04 Dec 2011)
+
+  04 Dec 2011; Hans de Graaff <graaff@gentoo.org> +i18n-0.6.0-r1.ebuild:
+  Use RUBY_S. Add ruby19.
 
   09 Sep 2011; Fabian Groffen <grobian@gentoo.org> i18n-0.6.0.ebuild:
   Marked ~sparc-solaris
